feat(food): add price type and multiple image upload support

--- a/app.json
+++ b/app.json
@@ -12,7 +12,9 @@
       "tsconfigPaths": true
     },
 
-    "plugins": [],
+    "plugins": [
+      "expo-image-picker"
+    ],
 
     "orientation": "portrait",
     "icon": "./assets/icon.png",
@@ -26,13 +28,22 @@
     },
     "assetBundlePatterns": ["**/*"],
     "ios": {
-      "supportsTablet": true
+      "supportsTablet": true,
+      "infoPlist": {
+        "NSCameraUsageDescription": "This app needs access to your camera to take photos of food items.",
+        "NSPhotoLibraryUsageDescription": "This app needs access to your photo library to select images of food items."
+      }
     },
     "android": {
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#ffffff"
-      }
+      },
+      "permissions": [
+        "CAMERA",
+        "READ_EXTERNAL_STORAGE",
+        "WRITE_EXTERNAL_STORAGE"
+      ]
     }
   }
 }
