--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-native-safe-area-context": "^5.4.0",
     "react-native-screens": "^4.15.2",
     "react-native-url-polyfill": "^2.0.0",
+    "react-native-webview": "^13.15.0",
     "zustand": "^5.0.8"
   },
   "devDependencies": {
