feat(register): add country picker and phone input component
refactor(database): implement auto-profile creation trigger and update schema
docs: add database setup guide

--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "nativewind": "^4.1.23",
     "react": "19.0.0",
     "react-native": "0.79.5",
+    "react-native-country-picker-modal": "^2.0.0",
+    "react-native-gesture-handler": "^2.28.0",
     "react-native-pager-view": "^6.9.1",
     "react-native-reanimated": "~3.17.4",
     "react-native-safe-area-context": "^5.4.0",
