--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "expo-image-picker": "^16.1.4",
     "expo-location": "^18.1.6",
     "expo-notifications": "~0.31.4",
+    "expo-sqlite": "^15.2.14",
     "expo-status-bar": "~2.2.3",
     "expo-web-browser": "^14.2.0",
     "nativewind": "^4.1.23",
