--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "name": "sisaplus",
   "version": "1.0.0",
   "scripts": {
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "start": "expo start",
     "prebuild": "expo prebuild",
     "lint": "eslint \"**/*.{js,jsx,ts,tsx}\" && prettier -c \"**/*.{js,jsx,ts,tsx,json}\"",
@@ -21,6 +21,7 @@
     "date-fns": "^4.1.0",
     "expo": "53.0.22",
     "expo-auth-session": "^6.2.1",
+    "expo-barcode-scanner": "^13.0.1",
     "expo-crypto": "^14.1.5",
     "expo-image-picker": "^16.1.4",
     "expo-location": "^18.1.6",
@@ -34,11 +35,14 @@
     "react-native-country-picker-modal": "^2.0.0",
     "react-native-gesture-handler": "^2.28.0",
     "react-native-pager-view": "^6.9.1",
+    "react-native-qrcode-scanner": "^1.5.5",
+    "react-native-qrcode-svg": "^6.3.15",
     "react-native-reanimated": "~3.17.4",
     "react-native-safe-area-context": "^5.4.0",
     "react-native-screens": "^4.15.2",
     "react-native-svg": "^15.12.1",
     "react-native-url-polyfill": "^2.0.0",
+    "react-native-web": "^0.20.0",
     "react-native-webview": "^13.15.0",
     "zustand": "^5.0.8"
   },
