--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@react-native-async-storage/async-storage": "^2.2.0",
-    "@react-native-community/datetimepicker": "^8.4.4",
+    "@react-native-async-storage/async-storage": "2.1.2",
+    "@react-native-community/datetimepicker": "8.4.1",
     "@react-native-picker/picker": "^2.11.1",
     "@react-navigation/bottom-tabs": "^7.4.6",
     "@react-navigation/native": "^7.1.17",
@@ -32,14 +32,14 @@
     "react": "19.0.0",
     "react-native": "0.79.5",
     "react-native-country-picker-modal": "^2.0.0",
-    "react-native-gesture-handler": "^2.28.0",
-    "react-native-pager-view": "^6.9.1",
+    "react-native-gesture-handler": "~2.24.0",
+    "react-native-pager-view": "6.7.1",
     "react-native-reanimated": "~3.17.4",
     "react-native-safe-area-context": "^5.4.0",
-    "react-native-screens": "^4.15.2",
-    "react-native-svg": "^15.12.1",
+    "react-native-screens": "~4.11.1",
+    "react-native-svg": "15.11.2",
     "react-native-url-polyfill": "^2.0.0",
-    "react-native-webview": "^13.15.0",
+    "react-native-webview": "13.13.5",
     "zustand": "^5.0.8"
   },
   "devDependencies": {
