--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
   "dependencies": {
     "@react-native-async-storage/async-storage": "2.1.2",
     "@react-native-community/datetimepicker": "8.4.1",
+    "@react-native-firebase/app": "^23.3.0",
+    "@react-native-firebase/auth": "^23.3.0",
+    "@react-native-firebase/firestore": "^23.3.0",
     "@react-native-picker/picker": "^2.11.1",
     "@react-navigation/bottom-tabs": "^7.4.6",
     "@react-navigation/native": "^7.1.17",
@@ -28,6 +31,7 @@
     "expo-sqlite": "^15.2.14",
     "expo-status-bar": "~2.2.3",
     "expo-web-browser": "^14.2.0",
+    "firebase": "^12.2.1",
     "nativewind": "^4.1.23",
     "react": "19.0.0",
     "react-native": "0.79.5",
@@ -40,7 +44,10 @@
     "react-native-svg": "15.11.2",
     "react-native-url-polyfill": "^2.0.0",
     "react-native-webview": "13.13.5",
-    "zustand": "^5.0.8"
+    "zustand": "^5.0.8",
+    "react-dom": "19.0.0",
+    "react-native-web": "^0.20.0",
+    "@expo/metro-runtime": "~5.0.4"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
