--- a/firebase.json
+++ b/firebase.json
@@ -5,6 +5,9 @@
     "rules": "firestore.rules",
     "indexes": "firestore.indexes.json"
   },
+  "storage": {
+    "rules": "storage.rules"
+  },
 
   "emulators": {
     "auth": {
