--- a/app.json
+++ b/app.json
@@ -34,6 +34,7 @@
       }
     },
     "android": {
+      "package": "com.yosadalabs.sisaplus",
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#ffffff"
