--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/metro-runtime": "~5.0.4",
     "@react-native-async-storage/async-storage": "2.1.2",
     "@react-native-community/datetimepicker": "8.4.1",
     "@react-native-firebase/app": "^23.3.0",
     "@react-native-firebase/auth": "^23.3.0",
     "@react-native-firebase/firestore": "^23.3.0",
+    "@react-native-firebase/messaging": "^23.3.0",
     "@react-native-picker/picker": "^2.11.1",
     "@react-navigation/bottom-tabs": "^7.4.6",
     "@react-navigation/native": "^7.1.17",
@@ -25,6 +27,7 @@
     "expo": "53.0.22",
     "expo-auth-session": "^6.2.1",
     "expo-crypto": "^14.1.5",
+    "expo-device": "~7.1.4",
     "expo-image-picker": "^16.1.4",
     "expo-location": "^18.1.6",
     "expo-notifications": "~0.31.4",
@@ -34,6 +37,7 @@
     "firebase": "^12.2.1",
     "nativewind": "^4.1.23",
     "react": "19.0.0",
+    "react-dom": "19.0.0",
     "react-native": "0.79.5",
     "react-native-country-picker-modal": "^2.0.0",
     "react-native-gesture-handler": "~2.24.0",
@@ -43,11 +47,9 @@
     "react-native-screens": "~4.11.1",
     "react-native-svg": "15.11.2",
     "react-native-url-polyfill": "^2.0.0",
-    "react-native-webview": "13.13.5",
-    "zustand": "^5.0.8",
-    "react-dom": "19.0.0",
     "react-native-web": "^0.20.0",
-    "@expo/metro-runtime": "~5.0.4"
+    "react-native-webview": "13.13.5",
+    "zustand": "^5.0.8"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
