--- a/app.json
+++ b/app.json
@@ -1,31 +1,29 @@
 {
   "expo": {
-    "name": "sisaplus",
-    "slug": "sisaplus",
+    "name": "Sisa Plus",
+    "slug": "sisa-plus",
     "version": "1.0.0",
-
     "web": {
       "favicon": "./assets/favicon.png"
     },
-
     "experiments": {
       "tsconfigPaths": true
     },
-
-    "plugins": ["expo-image-picker"],
-
+    "plugins": [
+      "expo-image-picker"
+    ],
     "orientation": "portrait",
     "icon": "./assets/logo.svg",
-
     "userInterfaceStyle": "light",
-
     "splash": {
       "image": "./assets/splash.png",
       "resizeMode": "contain",
       "backgroundColor": "#ef4444"
     },
     "scheme": "sisaplus",
-    "assetBundlePatterns": ["**/*"],
+    "assetBundlePatterns": [
+      "**/*"
+    ],
     "ios": {
       "supportsTablet": true,
       "infoPlist": {
@@ -38,7 +36,18 @@
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#ffffff"
       },
-      "permissions": ["CAMERA", "READ_EXTERNAL_STORAGE", "WRITE_EXTERNAL_STORAGE"]
-    }
+      "permissions": [
+        "android.permission.CAMERA",
+        "android.permission.READ_EXTERNAL_STORAGE",
+        "android.permission.WRITE_EXTERNAL_STORAGE",
+        "android.permission.RECORD_AUDIO"
+      ]
+    },
+    "extra": {
+      "eas": {
+        "projectId": "4022d6a6-1957-495b-992c-1d6224a96437"
+      }
+    },
+    "owner": "yosadadev"
   }
 }
