--- a/app.json
+++ b/app.json
@@ -41,7 +41,8 @@
         "android.permission.READ_EXTERNAL_STORAGE",
         "android.permission.WRITE_EXTERNAL_STORAGE",
         "android.permission.RECORD_AUDIO"
-      ]
+      ],
+      "package": "com.yosadadev.sisaplus"
     },
     "extra": {
       "eas": {
